# learnOpencv

./: 001-读取与显示图像.cpp  004-图像像素读写.cpp  005-图像像素的加减乘除.cpp  006-查找表(LUT)的使用.cpp  006.cpp  010-图像像素值统计及应用（普通图像转化为二值图像）.cpp  011.cpp  013-图像翻转.cpp  014-图像插值.cpp  016-ROI及相关操作.cpp  017-图像直方图.cpp  018-图像直方图均衡化.cpp  019-图像直方图比较.cpp  021-图像卷积及均值模糊.cpp  023-中值模糊.cpp  025-图像去噪.cpp  029-快速的图像边缘滤波算法.cpp  031-Sobel算子.cpp  032-Robert算子与Prewitt算子.cpp  036-Canny边缘检测器.cpp  038-拉普拉斯金字塔.cpp  039-图像模板匹配.cpp  042-图像二值寻找算法 (OTSU).cpp  045-图像二值化与去噪.cpp  048-二值图像分析之轮廓发现.cpp  050-二值图像分析(矩形面积与弧长).cpp  053-二值图像分析(使用Hu矩实现轮廓匹配).cpp  057-二值图像分析(点多边形测试).cpp  059-二值图像分析(霍夫直线检测).cpp  062-图像形态学(膨胀与腐蚀).cpp  063-图像形态学(膨胀与腐蚀-获取结构元素).cpp  064-图像形态学(开操作).cpp  066-图像形态学(开闭操作时候结构元素应用演示).cpp  069-图像形态学(图像梯度).cpp  071-形态学操作(击中击不中).cpp  073-二值图像分析(缺陷检测二).cpp  077-视频读取与处理.cpp  079-视频分析(背景和前景的提取).cpp  080-视频分析(背景消除与前景ROI提取).cpp  081-角点检测(Harris角点检测).cpp  (+30 more)
001-030/: 002-色彩空间转换(cvtcolor)与图像保存(imwrite).cpp  003-图像对象创建与赋值.cpp  007-图像像素的逻辑操作.cpp  008-图像通道分离与合并.cpp  009-色彩空间及其应用(提取图像前景和背景).cpp  012-视频读写.cpp  015-绘制几何形状及随机数.cpp  020-图像直方图反向投影.cpp  022-均值模糊与高斯模糊.cpp  024-噪声生成.cpp  026-高斯双边模糊.cpp  027-均值迁移模糊.cpp  028-图像积分图算法.cpp  030-自定义滤波.cpp
031-060/: 033-拉普拉斯算子.cpp  034-图像锐化.cpp  035-USM_锐化增强算法.cpp  037-图像金字塔.cpp  040-二值图像介绍.cpp  041-基本阈值操作.cpp  043-图像二值寻找算法 (TRIANGLE).cpp  044-自动阈值寻找与二值化.cpp  046-二值图像的连通组件标记.cpp  047-二值图像连通组件状态统计.cpp  049-二值图像分析(轮廓外接矩形).cpp  051-二值图像分析(使用轮廓逼近).cpp  052-二值图像分析(使用几何矩计算轮廓中心与横纵比过滤).cpp  054-二值图像分析(对轮廓圆与椭圆拟合).cpp  055-二值图像分析(凸包检测).cpp  056-二值图像分析(直线拟合与极值点寻找).cpp  058-二值图像分析(寻找最大内接圆).cpp  060-二值图像分析(霍夫直线检测二).cpp
061-090/: 061-二值图像分析(霍夫圆检测).cpp  065-图像形态学(闭操作).cpp  067-图像形态学(顶帽操作).cpp  068-图像形态学(黑帽操作).cpp  070-形态学应用(使用基本梯度实现轮廓分析).cpp  072-二值图像分析(缺陷检测一).cpp  074-二值图像分析(提取最大轮廓与编码关键点).cpp  075-图像去水印_修复.cpp  076-图像透视变换应用.cpp  078-识别与跟踪视频中的特定颜色对象.cpp  (+4 more)
(+21 files in other folders)
